# synth

./: CMakeLists.txt  main.c  synth.c  synth.h
api/: device.c  device.h
devices/: filter.c  filter.h  generator.c  generator.h  microphone.c  microphone.h  printer.c  printer.h  speaker.c  speaker.h
utils/: PA.c  PA.h  queue.c  queue.h
